# Mathematical_Library

./: .gitignore
Library_Mathematics/: Boostrap.bat  CMakeLists.txt
Library_Mathematics/Header_Files/: Array.h  ArrayImpl.h  List.h  ListImpl.h  Outils_Math.h  Test_Container.h  Test_Math.h  Vector.h  utils.h
Library_Mathematics/Library_Mathematics.dir/Debug/Library_.2D008BB7.tlog/: CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  Library_Mathematics.lastbuildstate
Library_Mathematics/src/: Mathematical_Library.cpp
notCmake/Mathematical_Library/: Mathematical_Library.sln
notCmake/Mathematical_Library/Mathematical_Library/: Array.h  ArrayImpl.h  Mathematical_Library.cpp  Mathematical_Library.vcxproj  Mathematical_Library.vcxproj.filters
notCmake/TemplateArray/: TemplateArray.sln
notCmake/TemplateArray/TemplateArray/: TemplateArray.h  TemplateArray.vcxproj  TemplateArray.vcxproj.filters  TemplateArrayImpl.h  basicType.h  main.cpp  utils.h
notCmake/TemplateList/: TemplateList.sln
notCmake/TemplateList/TemplateList/: TemplateList.h  TemplateList.vcxproj  TemplateList.vcxproj.filters  TemplateListImpl.h  main.cpp
notCmake/Template_Vector/: Template_Vector.sln
notCmake/Template_Vector/Template_Vector/: Template_Vector.cpp  Template_Vector.vcxproj  Template_Vector.vcxproj.filters
